# automata-theory

labs/lab1/: CMakeLists.txt  main.cpp
labs/lab1/src/impls/: CMakeLists.txt
labs/lab1/src/impls/lex_version/flex/: lex_file.lex
labs/lab1/src/impls/lex_version/include/: lex_version.hpp
labs/lab1/src/impls/lex_version/source/: generated.cpp
labs/lab1/src/impls/regex_version/source/: regex_version.cpp
labs/lab1/src/impls/smc_version/: ParserFSM.cpp  ParserFSM.h  lexer_context.h  parser.sm  parser_sm.cpp  parser_sm.h
labs/lab1/tests/: init_file.txt  tests.cpp
labs/lab1/timing/: CMakeLists.txt  main.cpp
labs/lab1/timing/time_results/: .~lock.Timing_graphics.ods#  Timing_graphics.ods  lex.txt  regex.txt  smc.txt
labs/lab2/: go.mod  main.go
labs/lab2/pkg/debug_pkg/: debug_funcs.go
labs/lab2/pkg/dfa_pkg/: dfa_struct.go  difference_composition.go  invert.go  iterator_struct.go  kpath.go  mindfa_struct.go  mindfa_test.go  operations_test.go  search_funcs.go
labs/lab2/pkg/dialogue_pkg/: dialogue.go
labs/lab2/pkg/graph_pkg/: graph_funcs.go
labs/lab2/pkg/nfa_pkg/: iterator.go  nfa_struct.go  search_funcs.go  search_test.go
labs/lab3/: Makefile  RobotLexer.h  ast.hpp  diff_map.txt  interpreter.cpp  location.hh  main.cpp  map.txt  program.xml  right_hand.xml  robot.lex.cpp  robot.tab.cpp  robot.tab.hpp  robot.y  robot.ypp  robot_lexer.l
labs/lab3/broken_files/: errors.xml
labs/lab3/checks/: errors.xml  naming_collision.xml  recursion.xml  scopes.xml
labs/lab3/maps/: common.txt  map8_10.txt  unusual.txt
labs/lab3/visualizer/: main.go
(+12 files in other folders)
